# bday-bot

./: README.md  pyproject.toml
src/bday_bot/: __init__.py  bot.py  data.py  sentiment.py
